deploy/k8s/03_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: teleprompter-svc
  namespace: teleprompter
  labels:
    app: teleprompter
    app.kubernetes.io/name: teleprompter
    app.kubernetes.io/part-of: teleprompter
spec:
  ports:
    - port: 8080
      name: web
  selector:
    app: teleprompter
